<resources>
    <string name="app_name">Banglar Siksha</string>
    <string name="educationText">Education</string>
    <string name="isttext">First</string>
    <string name="hmAccessText">HM Access</string>
    <string name="teacherText">Teacher</string>
    <string name="parentText">Parent</string>
    <string name="emailText">Email</string>
    <string name="userName">UserName</string>
    <string name="userId">userId</string>
    <string name="passwordText">Password</string>
    <string name="downloadText">Download Manual</string>
    <string name="loginText">Login</string>
    <string name="forgetPasswordText">Forget Password?</string>
    <string name="shareText">Share</string>
    <string name="aboutUsText">About US</string>
    <string name="selectClasstext">Select Class</string>
    <string name="welcomeHinduSchoolText">Welcome to Hindu School</string>
    <string name="classOverflowText">Class Overview</string>
    <string name="todayClassText">Todays Class Routine</string>
    <string name="classRoutineText">Class Routine</string>
    <string name="event">Event</string>
    <string name="thirtyText">30 %</string>
    <string name="leassonplanText">Lesson plan completed</string>
    <string name="classFiveText">Class-V</string>
    <string name="selectDate">Select Date</string>
    <string name="btnGo">GO</string>

    <string name="englishText">English</string>
    <string name="mathText">Mathematics</string>
    <string name="timeText">11am - 11:45am</string>
    <string name="examTimeText">11am - 2:00pm</string>

    <string name="classText">Class - V | Section - B</string>
    <string name="classInfoText">Class</string>
    <string name="nameText">Amit Dutta</string>
    <string name="typeText">Teacher</string>
    <string name="dashBoard">Dashboard</string>board
    <string name="studentText">Student</string>
    <string name="staticDate">02 February,2019</string>

    <string name="attendenceText">Attendance</string>
    <string name="healthInfoText">Health Information</string>
    <string name="gameText">Game &amp; Sports</string>
    <string name="eventsText">Events</string>
    <string name="coActivityText">Co-Curricular Activity</string>
    <string name="acadamicText">Academic</string>
    <string name="markText">Marks Entry</string>
    <string name="classPlanText">Class Plan</string>
    <string name="classLogText">Class Log</string>
    <string name="questionText">Question Bank</string>
    <string name="reportText">Report Incident</string>
    <string name="leaveText">Leave of Absense</string>
    <string name="schemesText">Schemes</string>
    <string name="feedbackText">Feedback</string>
    <string name="logOutText">Log Out</string>
    <string name="sectionText">Sec - B</string>
    <string name="searchText">Search By students name</string>
    <string name="routineText">Routine</string>
    <string name="examText">Exam Schedule</string>
    <string name="todaysClassPlanText">Todays Class Plan</string>
    <string name="moreClassPlan">More Class Plan</string>

    <string name="markAttendencetext">Mark Attendence</string>
    <string name="rollNoText">Roll No</string>
    <string name="studentName">Student Name</string>
    <string name="statusText">Status</string>
    <string name="oneText">01</string>
    <string name="makePlanText">Make Class Plan</string>
    <string name="typeHereText">Type here</string>
    <string name="noticeText">Notice</string>
    <string name="applicatioLeave">Leave Application</string>
    <string name="subjectText">Subject :Life Science</string>
    <string name="basicPropertyText">Basic Property of life</string>
    <string name="biologyText">Biology is the study of patern</string>
    <string name="taxonomyText">Taxonomy and taxonomic hirarchy</string>
    <string name="levelOfOgranistaionText">Levels of Organisation of life</string>
    <string name="biologicalText">Biolecules and their behaviour</string>
    <string name="cellText">Cell</string>
    <string name="tissue">Tissue</string>
    <string name="submitClassPlanText">Submit Class Plan</string>
    <string name="classSuccesPlanText">Class Plan Created Successfully</string>
    <string name="goToDashBoardText">Go to Dashboard</string>
    <string name="makeotherText">Make other Plan</string>
    <string name="selectSectionText">Select Section</string>
    <string name="selectSubject">Select Subject</string>
    <string name="selectClassSection">Select Class Section</string>
</resources>

