<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/whiteColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/lay_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:background="@color/allAppColor"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:orientation="vertical">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/providerFilePicSideMenu"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="6dp"
                            android:layout_gravity="center"
                            android:src="@drawable/student6" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18dp"
                            android:textColor="@color/whiteColor"
                            android:text="@string/nameText"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:textSize="18dp"
                            android:textColor="@color/whiteColor"
                            android:text="@string/teacherText"/>
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/dashBoard"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/studentText"
                        android:textColor="#019ae8"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/attendenceNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/attendenceText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/healthInfoNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/healthInfoText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/silverColor"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/studentText"
                        android:textColor="#019ae8"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/gameAndSportsNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/gameText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/eventsNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/eventsText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/coCurricularNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/coActivityText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/silverColor"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/acadamicText"
                        android:textColor="#019ae8"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/markSheetEntryNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/markText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/classPlanNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/classPlanText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/classLogNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/classLogText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/questionBankNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/questionText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/silverColor"/>
                <RelativeLayout
                    android:id="@+id/reportIncidentNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/reportText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/leaveOfAbsenseNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/leaveText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/schemesNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/schemesText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/feedbackNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/feedbackText"
                        android:textColor="@color/blackColor"
                        android:textSize="16dp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/logOutNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/allAppColor"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:text="@string/logOutText"
                        android:textColor="@color/whiteColor"
                        android:textSize="16dp" />
                </RelativeLayout>
            </LinearLayout>
</android.support.v4.widget.NestedScrollView>
        </LinearLayout>
</android.support.constraint.ConstraintLayout>
