<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_white_rec">
<ImageView
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:src="@drawable/tick_ic"
    android:layout_marginTop="28dp"
    android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        android:layout_marginTop="18dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/classSuccesPlanText"/>
    <Button
        android:id="@+id/makeOtherPlanButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_green_dark_rec"
        android:textColor="@color/whiteColor"
        android:text="@string/makeotherText"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
    </Button>
    <Button
        android:id="@+id/goToDashBoardButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_blue_dark_rec"
        android:textColor="@color/whiteColor"
        android:text="@string/goToDashBoardText"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp">
    </Button>

</LinearLayout>