<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginRight="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/greenColor"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="17dp"
            android:src="@drawable/book_ic"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/perTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thirtyText"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="18dp"
                    android:textColor="@color/whiteColor"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/planTextView"
                    android:layout_below="@+id/perTextView"
                    android:layout_marginRight="18dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leassonplanText"
                    android:textColor="@color/whiteColor"
                    android:textSize="14dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/classTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classFiveText"
        android:layout_marginLeft="17dp"
        android:textColor="@color/whiteColor"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:textSize="14dp"/>
    <TextView
        android:id="@+id/subjectTextView"
        android:layout_below="@+id/perTextView"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/englishText"
        android:textColor="@color/whiteColor"
        android:textSize="15dp"/>
</LinearLayout>

</android.support.v7.widget.CardView>