<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" >

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:id="@+id/closeButton1"
        android:layout_width="22dp"
        android:visibility="visible"
        android:layout_height="22dp"
        android:backgroundTint="@color/blackColor"
        android:background="@drawable/close_ic"/>
    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linnearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/banner"
        android:orientation="vertical">

            <Button
            android:id="@+id/closeButton"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/close_ic"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="11dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/education_first"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/bg_silver_dark_rec"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="55dp">
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorHint="@color/silverColor"
        android:hint="@string/userName"
        android:paddingLeft="10dp"
        android:background="@android:color/transparent"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_silver_dark_rec"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/password"
            android:ellipsize="start"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/silverColor"
            android:hint="@string/passwordText"
            android:paddingLeft="10dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:textColor="@color/forgetColorText"
        android:textSize="17dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="3dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:text="@string/forgetPasswordText"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_blue_dark_rec"
        android:textColor="@color/whiteColor"
        android:text="@string/loginText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp">
    </Button>
        <TextView
            android:id="@+id/btnDownloadManual"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:autoLink="all"
            android:background="@color/whiteColor"
            android:textColor="@color/emailTextColor"
            android:text="@string/downloadText"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp">
        </TextView>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>