<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginRight="6dp"
    android:layout_marginLeft="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/book_ic_class_routine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/subjectTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mathText"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#222222"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:textSize="17dp"/>
                <TextView
                    android:id="@+id/sectionTextView"
                    android:layout_below="@+id/perTextView"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="6dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/classText"
                    android:alpha="0.6"
                    android:textColor="#222222"
                    android:textSize="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:alpha="0.3"
            android:layout_marginTop="12dp"
            android:background="#222222"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="27dp"
                android:src="@drawable/time_ic"/>
            <TextView
                android:id="@+id/timingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeText"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="17dp"
                android:textColor="#019ae8"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textSize="14dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>